[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
bs4 = "^0.0.1"
requests = "^2.27.1"
pyglet = "^1.5.23"
discord-webhook = "^0.16.0"
colorama = "^0.4.4"
selenium = "^4.1.5"
pythonping = "^1.1.1"
Js2Py = "^0.71"
PythonJS = "^0.9.0"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"